gen/grammaireParser.java
// Generated from C:/Users/Dell/IdeaProjects/Tiny_SII/src\grammaire.g4 by ANTLR 4.9
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class grammaireParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, PROGID=14, ID=15, OPERATEUR=16, 
		WS=17, WHATEVER=18, NBR=19, COM=20, COMLIGNES=21, Start=22, Compil=23, 
		IntCompil=24, FloatCompil=25, StringCompil=26, If=27, Then=28, Else=29, 
		Do=30, While=31, ScanCompile=32, PrintCompil=33;
	public static final int
		RULE_operande = 0, RULE_comparateur = 1, RULE_expression = 2, RULE_comparaison = 3, 
		RULE_affect = 4, RULE_decvar = 5, RULE_dakhel = 6, RULE_si = 7, RULE_tantque = 8, 
		RULE_dakhellecture = 9, RULE_lecture = 10, RULE_dakhelecriture = 11, RULE_ecriture = 12, 
		RULE_instruction = 13, RULE_programme = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"operande", "comparateur", "expression", "comparaison", "affect", "decvar", 
			"dakhel", "si", "tantque", "dakhellecture", "lecture", "dakhelecriture", 
			"ecriture", "instruction", "programme"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "'<'", "'>'", "'=='", "'!='", "';'", "'='", "'('", "')'", 
			"'{'", "'}'", "','", "'Compil'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "PROGID", "ID", "OPERATEUR", "WS", "WHATEVER", "NBR", "COM", 
			"COMLIGNES", "Start", "Compil", "IntCompil", "FloatCompil", "StringCompil", 
			"If", "Then", "Else", "Do", "While", "ScanCompile", "PrintCompil"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "grammaire.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public grammaireParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class OperandeContext extends ParserRuleContext {
		public List<TerminalNode> NBR() { return getTokens(grammaireParser.NBR); }
		public TerminalNode NBR(int i) {
			return getToken(grammaireParser.NBR, i);
		}
		public TerminalNode ID() { return getToken(grammaireParser.ID, 0); }
		public OperandeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operande; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).enterOperande(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).exitOperande(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammaireVisitor ) return ((grammaireVisitor<? extends T>)visitor).visitOperande(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperandeContext operande() throws RecognitionException {
		OperandeContext _localctx = new OperandeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_operande);
		try {
			setState(35);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(30);
				match(NBR);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(31);
				match(NBR);
				setState(32);
				match(T__0);
				setState(33);
				match(NBR);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(34);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparateurContext extends ParserRuleContext {
		public ComparateurContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparateur; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).enterComparateur(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).exitComparateur(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammaireVisitor ) return ((grammaireVisitor<? extends T>)visitor).visitComparateur(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComparateurContext comparateur() throws RecognitionException {
		ComparateurContext _localctx = new ComparateurContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_comparateur);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public List<OperandeContext> operande() {
			return getRuleContexts(OperandeContext.class);
		}
		public OperandeContext operande(int i) {
			return getRuleContext(OperandeContext.class,i);
		}
		public TerminalNode OPERATEUR() { return getToken(grammaireParser.OPERATEUR, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammaireVisitor ) return ((grammaireVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			operande();
			setState(40);
			match(OPERATEUR);
			setState(41);
			operande();
			setState(42);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparaisonContext extends ParserRuleContext {
		public List<OperandeContext> operande() {
			return getRuleContexts(OperandeContext.class);
		}
		public OperandeContext operande(int i) {
			return getRuleContext(OperandeContext.class,i);
		}
		public ComparateurContext comparateur() {
			return getRuleContext(ComparateurContext.class,0);
		}
		public ComparaisonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparaison; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).enterComparaison(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).exitComparaison(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammaireVisitor ) return ((grammaireVisitor<? extends T>)visitor).visitComparaison(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComparaisonContext comparaison() throws RecognitionException {
		ComparaisonContext _localctx = new ComparaisonContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_comparaison);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			operande();
			setState(45);
			comparateur();
			setState(46);
			operande();
			setState(47);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AffectContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(grammaireParser.ID, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public OperandeContext operande() {
			return getRuleContext(OperandeContext.class,0);
		}
		public AffectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_affect; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).enterAffect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).exitAffect(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammaireVisitor ) return ((grammaireVisitor<? extends T>)visitor).visitAffect(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AffectContext affect() throws RecognitionException {
		AffectContext _localctx = new AffectContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_affect);
		try {
			setState(59);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(49);
				match(ID);
				setState(50);
				match(T__6);
				setState(51);
				expression();
				setState(52);
				match(T__5);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(54);
				match(ID);
				setState(55);
				match(T__6);
				setState(56);
				operande();
				setState(57);
				match(T__5);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecvarContext extends ParserRuleContext {
		public TerminalNode IntCompil() { return getToken(grammaireParser.IntCompil, 0); }
		public TerminalNode ID() { return getToken(grammaireParser.ID, 0); }
		public DecvarContext decvar() {
			return getRuleContext(DecvarContext.class,0);
		}
		public TerminalNode FloatCompil() { return getToken(grammaireParser.FloatCompil, 0); }
		public TerminalNode StringCompil() { return getToken(grammaireParser.StringCompil, 0); }
		public TerminalNode EOF() { return getToken(grammaireParser.EOF, 0); }
		public DecvarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decvar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).enterDecvar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).exitDecvar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammaireVisitor ) return ((grammaireVisitor<? extends T>)visitor).visitDecvar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecvarContext decvar() throws RecognitionException {
		DecvarContext _localctx = new DecvarContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_decvar);
		try {
			setState(74);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IntCompil:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				match(IntCompil);
				setState(62);
				match(ID);
				setState(63);
				match(T__5);
				setState(64);
				decvar();
				}
				break;
			case FloatCompil:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				match(FloatCompil);
				setState(66);
				match(ID);
				setState(67);
				match(T__5);
				setState(68);
				decvar();
				}
				break;
			case StringCompil:
				enterOuterAlt(_localctx, 3);
				{
				setState(69);
				match(StringCompil);
				setState(70);
				match(ID);
				setState(71);
				match(T__5);
				setState(72);
				decvar();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 4);
				{
				setState(73);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DakhelContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public DakhelContext dakhel() {
			return getRuleContext(DakhelContext.class,0);
		}
		public AffectContext affect() {
			return getRuleContext(AffectContext.class,0);
		}
		public TerminalNode EOF() { return getToken(grammaireParser.EOF, 0); }
		public DakhelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dakhel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).enterDakhel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).exitDakhel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammaireVisitor ) return ((grammaireVisitor<? extends T>)visitor).visitDakhel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DakhelContext dakhel() throws RecognitionException {
		DakhelContext _localctx = new DakhelContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_dakhel);
		try {
			setState(83);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				expression();
				setState(77);
				dakhel();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				affect();
				setState(80);
				dakhel();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(82);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SiContext extends ParserRuleContext {
		public TerminalNode If() { return getToken(grammaireParser.If, 0); }
		public ComparaisonContext comparaison() {
			return getRuleContext(ComparaisonContext.class,0);
		}
		public TerminalNode Then() { return getToken(grammaireParser.Then, 0); }
		public List<DakhelContext> dakhel() {
			return getRuleContexts(DakhelContext.class);
		}
		public DakhelContext dakhel(int i) {
			return getRuleContext(DakhelContext.class,i);
		}
		public List<SiContext> si() {
			return getRuleContexts(SiContext.class);
		}
		public SiContext si(int i) {
			return getRuleContext(SiContext.class,i);
		}
		public TerminalNode Else() { return getToken(grammaireParser.Else, 0); }
		public TerminalNode EOF() { return getToken(grammaireParser.EOF, 0); }
		public SiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_si; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).enterSi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).exitSi(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammaireVisitor ) return ((grammaireVisitor<? extends T>)visitor).visitSi(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SiContext si() throws RecognitionException {
		SiContext _localctx = new SiContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_si);
		try {
			setState(111);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				match(If);
				setState(86);
				match(T__7);
				setState(87);
				comparaison();
				setState(88);
				match(T__8);
				setState(89);
				match(Then);
				setState(90);
				match(T__9);
				setState(91);
				dakhel();
				setState(92);
				si();
				setState(93);
				match(T__10);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				match(If);
				setState(96);
				match(T__7);
				setState(97);
				comparaison();
				setState(98);
				match(T__8);
				setState(99);
				match(Then);
				setState(100);
				match(T__9);
				setState(101);
				dakhel();
				setState(102);
				si();
				setState(103);
				match(T__10);
				setState(104);
				match(Else);
				setState(105);
				match(T__9);
				setState(106);
				dakhel();
				setState(107);
				si();
				setState(108);
				match(T__10);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(110);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TantqueContext extends ParserRuleContext {
		public TerminalNode Do() { return getToken(grammaireParser.Do, 0); }
		public DakhelContext dakhel() {
			return getRuleContext(DakhelContext.class,0);
		}
		public TerminalNode While() { return getToken(grammaireParser.While, 0); }
		public ComparaisonContext comparaison() {
			return getRuleContext(ComparaisonContext.class,0);
		}
		public SiContext si() {
			return getRuleContext(SiContext.class,0);
		}
		public TantqueContext tantque() {
			return getRuleContext(TantqueContext.class,0);
		}
		public TerminalNode EOF() { return getToken(grammaireParser.EOF, 0); }
		public TantqueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tantque; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).enterTantque(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).exitTantque(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammaireVisitor ) return ((grammaireVisitor<? extends T>)visitor).visitTantque(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TantqueContext tantque() throws RecognitionException {
		TantqueContext _localctx = new TantqueContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_tantque);
		try {
			setState(143);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				match(Do);
				setState(114);
				match(T__9);
				setState(115);
				dakhel();
				setState(116);
				match(T__10);
				setState(117);
				match(While);
				setState(118);
				match(T__7);
				setState(119);
				comparaison();
				setState(120);
				match(T__8);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				match(Do);
				setState(123);
				match(T__9);
				setState(124);
				dakhel();
				setState(125);
				si();
				setState(126);
				match(T__10);
				setState(127);
				match(While);
				setState(128);
				match(T__7);
				setState(129);
				comparaison();
				setState(130);
				match(T__8);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(132);
				match(Do);
				setState(133);
				match(T__9);
				setState(134);
				dakhel();
				setState(135);
				tantque();
				setState(136);
				match(T__10);
				setState(137);
				match(While);
				setState(138);
				match(T__7);
				setState(139);
				comparaison();
				setState(140);
				match(T__8);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(142);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DakhellectureContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(grammaireParser.ID, 0); }
		public DakhellectureContext dakhellecture() {
			return getRuleContext(DakhellectureContext.class,0);
		}
		public DakhellectureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dakhellecture; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).enterDakhellecture(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).exitDakhellecture(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammaireVisitor ) return ((grammaireVisitor<? extends T>)visitor).visitDakhellecture(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DakhellectureContext dakhellecture() throws RecognitionException {
		DakhellectureContext _localctx = new DakhellectureContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_dakhellecture);
		try {
			setState(149);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(145);
				match(ID);
				setState(146);
				match(T__11);
				setState(147);
				dakhellecture();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(148);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LectureContext extends ParserRuleContext {
		public TerminalNode ScanCompile() { return getToken(grammaireParser.ScanCompile, 0); }
		public DakhellectureContext dakhellecture() {
			return getRuleContext(DakhellectureContext.class,0);
		}
		public LectureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lecture; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).enterLecture(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).exitLecture(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammaireVisitor ) return ((grammaireVisitor<? extends T>)visitor).visitLecture(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LectureContext lecture() throws RecognitionException {
		LectureContext _localctx = new LectureContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_lecture);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(ScanCompile);
			setState(152);
			match(T__7);
			setState(153);
			dakhellecture();
			setState(154);
			match(T__8);
			setState(155);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DakhelecritureContext extends ParserRuleContext {
		public TerminalNode WHATEVER() { return getToken(grammaireParser.WHATEVER, 0); }
		public TerminalNode ID() { return getToken(grammaireParser.ID, 0); }
		public DakhelecritureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dakhelecriture; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).enterDakhelecriture(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).exitDakhelecriture(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammaireVisitor ) return ((grammaireVisitor<? extends T>)visitor).visitDakhelecriture(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DakhelecritureContext dakhelecriture() throws RecognitionException {
		DakhelecritureContext _localctx = new DakhelecritureContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_dakhelecriture);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==WHATEVER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EcritureContext extends ParserRuleContext {
		public TerminalNode PrintCompil() { return getToken(grammaireParser.PrintCompil, 0); }
		public DakhelecritureContext dakhelecriture() {
			return getRuleContext(DakhelecritureContext.class,0);
		}
		public EcritureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ecriture; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).enterEcriture(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).exitEcriture(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammaireVisitor ) return ((grammaireVisitor<? extends T>)visitor).visitEcriture(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EcritureContext ecriture() throws RecognitionException {
		EcritureContext _localctx = new EcritureContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_ecriture);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(PrintCompil);
			setState(160);
			match(T__7);
			setState(161);
			dakhelecriture();
			setState(162);
			match(T__8);
			setState(163);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public LectureContext lecture() {
			return getRuleContext(LectureContext.class,0);
		}
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public EcritureContext ecriture() {
			return getRuleContext(EcritureContext.class,0);
		}
		public AffectContext affect() {
			return getRuleContext(AffectContext.class,0);
		}
		public SiContext si() {
			return getRuleContext(SiContext.class,0);
		}
		public TantqueContext tantque() {
			return getRuleContext(TantqueContext.class,0);
		}
		public TerminalNode EOF() { return getToken(grammaireParser.EOF, 0); }
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammaireListener ) ((grammaireListener)listener).exitInstruction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grammaireVisitor ) return ((grammaireVisitor<? extends T>)visitor).visitInstruction(this);
			else return visitor.visitChildren(this);
		}
	}
